fix: improve alignments

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -209,7 +209,7 @@ body {
             right: 16px;
             bottom: 16px;
             padding: 3.72px;
-
+            transform: translateY(0);
             img {
                 width: 64.55px;
                 height: 64.55px;
